# Magnet

./: Cargo.toml
client/coretime/bulk/: Cargo.toml
client/coretime/bulk/src/: lib.rs
client/coretime/common/: Cargo.toml
client/coretime/common/src/: configuration.rs  lib.rs
client/coretime/on-demand/: Cargo.toml
client/coretime/on-demand/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/assets-bridge/: Cargo.toml
pallets/assets-bridge/src/: lib.rs  tests.rs
pallets/assurance/: Cargo.toml
pallets/assurance/src/: lib.rs  mock.rs  tests.rs
pallets/bulk/: Cargo.toml
pallets/bulk/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/evm-utils/: Cargo.toml
pallets/evm/precompile/substrate-utils/: Cargo.toml
pallets/evm/precompile/transfer-to-magnet/: Cargo.toml
pallets/evm/precompile/transfer-to-magnet/src/: lib.rs
pallets/liquidation/: Cargo.toml
pallets/liquidation/src/: lib.rs  mock.rs
pallets/on-demand/: Cargo.toml
pallets/on-demand/src/: benchmarking.rs  lib.rs  mock.rs
pallets/pot/: Cargo.toml
primitives/coretime/bulk/: Cargo.toml
primitives/coretime/bulk/src/: inherent_client.rs  lib.rs
primitives/coretime/common/: Cargo.toml
primitives/coretime/on-demand/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: apis.rs  contracts_config.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/governance/: fellowship.rs  mod.rs  tracks.rs
runtime/src/weights/: mod.rs  pallet_scheduler.rs  pallet_xcm.rs
runtime/src/xcms/: xcm_weight.rs
