[package]
name = "parachain-magnet-node"
version = "0.6.0"
authors = ["Magnet"]
description = "A scalable evm smart contract platform node, utilizing DOT as the gas fee."
license = "Apache License 2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true
build = "build.rs"
publish = false

[dependencies]
clap = { features = ["derive"], workspace = true }
log = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }
futures = { workspace = true }
serde_json = { workspace = true, default-features = true }
docify = { workspace = true }
parachain-magnet-runtime.workspace = true
frame-benchmarking.workspace = true
frame-benchmarking.default-features = true
frame-benchmarking-cli.workspace = true
frame-benchmarking-cli.default-features = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment-rpc.default-features = true
sc-basic-authorship.workspace = true
sc-basic-authorship.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-cli.workspace = true
sc-cli.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-offchain.workspace = true
sc-offchain.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-network-sync.workspace = true
sc-network-sync.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-sysinfo.workspace = true
sc-sysinfo.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sc-tracing.workspace = true
sc-tracing.default-features = true
sc-transaction-pool.workspace = true
sc-transaction-pool.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-consensus-aura.workspace = true
sp-consensus-aura.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-timestamp.workspace = true
sp-timestamp.default-features = true
substrate-frame-rpc-system.workspace = true
substrate-frame-rpc-system.default-features = true
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
polkadot-cli = { features = ["rococo-native"], workspace = true, default-features = true }
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
xcm.workspace = true
cumulus-client-cli.workspace = true
cumulus-client-cli.default-features = true
cumulus-client-collator.workspace = true
cumulus-client-collator.default-features = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-aura.default-features = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-common.default-features = true
cumulus-client-consensus-proposer.workspace = true
cumulus-client-consensus-proposer.default-features = true
cumulus-client-service.workspace = true
cumulus-client-service.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-parachain-inherent.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
color-print = { workspace = true }

#substrate
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true}
frame-system-rpc-runtime-api = { workspace = true}
sc-consensus-aura = { workspace = true}
sp-inherents = { workspace = true}
sc-consensus-manual-seal = { workspace = true}
sc-rpc-api = { workspace = true}


# Frontier Primitive
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-dynamic-fee = { workspace = true }

fc-api = { workspace = true }
fc-cli = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fc-consensus = {  workspace = true }


[build-dependencies]
substrate-build-script-utils.workspace = true
substrate-build-script-utils.default-features = true

[features]
default = [
	"with-rocksdb-weights",
	"rocksdb",
	"sql",
	"txpool",
]

rocksdb = [
	"sc-cli/rocksdb",
	"sc-service/rocksdb",
	"fc-cli/rocksdb",
	"fc-db/rocksdb",
	"fc-mapping-sync/rocksdb",
	"fc-rpc/rocksdb",
]

sql = [
	"fc-db/sql",
	"fc-mapping-sync/sql",
]
with-rocksdb-weights = ["parachain-magnet-runtime/with-rocksdb-weights"]
with-paritydb-weights = ["parachain-magnet-runtime/with-paritydb-weights"]
txpool = ["fc-rpc/txpool"]

runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachain-magnet-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"parachain-magnet-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
