[package]
name = "parachain-magnet-runtime"
version = "0.6.0"
authors = ["Magnet"]
description = "A scalable evm smart contract platform runtime, utilizing DOT as the gas fee."
license = "Apache License 2.0"
homepage = "https://magnet.magport.io/"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
docify = { workspace = true }

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
smallvec = { workspace = true, default-features = true }
docify = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-executive.workspace = true
frame-metadata-hash-extension.workspace = true
frame-support = { features = ["experimental"], workspace = true }
frame-system.workspace = true
frame-system-benchmarking = { optional = true, workspace = true }
frame-system-rpc-runtime-api.workspace = true
frame-try-runtime = { optional = true, workspace = true }
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-message-queue.workspace = true
pallet-session.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
pallet-xcm.workspace = true
polkadot-parachain-primitives.workspace = true
polkadot-runtime-common.workspace = true
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true
cumulus-pallet-aura-ext.workspace = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-session-benchmarking.workspace = true
cumulus-pallet-xcm.workspace = true
cumulus-pallet-xcmp-queue.workspace = true
cumulus-primitives-aura.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-utility.workspace = true
cumulus-primitives-storage-weight-reclaim.workspace = true
pallet-collator-selection.workspace = true
parachains-common.workspace = true
parachain-info.workspace = true

# Polkadot
polkadot-primitives = { workspace = true, default-features = false}

# Substrate
sp-std = { workspace = true, default-features = false}
pallet-assets = { workspace = true, default-features = false}
pallet-utility = { workspace = true, default-features = false}
pallet-conviction-voting = { workspace = true, default-features = false}
pallet-whitelist = { workspace = true, default-features = false}
pallet-preimage = { workspace = true, default-features = false}
pallet-ranked-collective = { workspace = true, default-features = false}
sp-arithmetic = { workspace = true, default-features = false}
pallet-scheduler = { workspace = true, default-features = false}
pallet-referenda = { workspace = true, default-features = false}
pallet-collective = { workspace = true, default-features = false}
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false}
pallet-contracts = { workspace = true, default-features = false}
pallet-multisig = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }

# Local
mp-system = { path = "../primitives/system", default-features = false }
pallet-evm-utils = { path = "../pallets/evm-utils", default-features = false }
pallet-precompile-substrate-utils = { path = "../pallets/evm/precompile/substrate-utils", default-features = false }
pallet-precompile-transfer-to-magnet = { path = "../pallets/evm/precompile/transfer-to-magnet", default-features = false }
pallet-assets-bridge = { path = "../pallets/assets-bridge", default-features = false }
pallet-on-demand = { path = "../pallets/on-demand", default-features = false }
mp-coretime-bulk = { path = "../primitives/coretime/bulk", default-features = false }
mp-coretime-on-demand = { path = "../primitives/coretime/on-demand", default-features = false }
pallet-pot = { path = "../pallets/pot", default-features = false }
pallet-pot-runtime-api = { path = "../pallets/pot/runtime-api", default-features = false }
pallet-assurance = { path = "../pallets/assurance", default-features = false }
pallet-liquidation = {path = "../pallets/liquidation", default-features = false}
pallet-bulk = { path = "../pallets/bulk", default-features = false }

#move pallet
pallet-move = { workspace = true, default-features = false }

#Frontier FRAME
pallet-evm-chain-id = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }
pallet-ethereum = { workspace = true, default-features = false }
pallet-base-fee = { workspace = true, default-features = false }
pallet-dynamic-fee = { workspace = true, default-features = false }
pallet-evm-precompile-modexp = { workspace = true, default-features = false }
pallet-evm-precompile-sha3fips = { workspace = true, default-features = false }
pallet-evm-precompile-simple = { workspace = true, default-features = false }
pallet-hotfix-sufficients = { workspace = true, default-features = false }
# Frontier Primitive
fp-evm = { workspace = true, default-features = false }
fp-account = { workspace = true, default-features = false }
fp-dynamic-fee = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-self-contained = { workspace = true, default-features = false, features = ["serde", "try-runtime"] }

[features]
default = ["std", "with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-session-benchmarking/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-storage-weight-reclaim/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-message-queue/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-utility/std",
	"pallet-conviction-voting/std",
	"pallet-referenda/std",
	"pallet-whitelist/std",
	"pallet-preimage/std",
	"pallet-ranked-collective/std",
	"polkadot-primitives/std",
	"pallet-collective/std",
	# Frontier
	"pallet-evm-chain-id/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
	"pallet-hotfix-sufficients/std",
	"fp-evm/std",
	"fp-account/std",
	"fp-dynamic-fee/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-evm-utils/std",
	"pallet-precompile-substrate-utils/std",
	"pallet-precompile-transfer-to-magnet/std",
	"pallet-assets-bridge/std",
	"pallet-scheduler/std",
	"pallet-on-demand/std",
	"mp-coretime-on-demand/std",
	"pallet-pot/std",
	"pallet-assurance/std",
    "pallet-liquidation/std",
	"pallet-bulk/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-contracts/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-move/std",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-utility/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-on-demand/runtime-benchmarks",
	"pallet-pot/runtime-benchmarks",
	"pallet-assurance/runtime-benchmarks",
    "pallet-liquidation/runtime-benchmarks",
	"pallet-bulk/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-pot/try-runtime",
    "pallet-liquidation/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-proxy/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
